# datasus-db

./: .gitignore  README.md  cnv.py  datasus.py  db.py  dbf.py  ftp.py  main.ipynb  main.py  multiprocess.py  pyproject.toml  requirements.txt  test.py  utils.py
.github/workflows/: docs.yml
datasources/: auxiliar.py  ibge_pop.py  ibge_pop_tcu.py  po.py  sih_rd.py  sih_rh.py  sim_do.py
datasources/auxiliar/: municipios.py
datasus-db/: main.py  pl_utils.py  utils.py
datasus-db/datasources/: po.py
datasus_db/: __init__.py  cnv.py  datasus.py  db.py  dbf.py  ftp.py  main.py  utils.py
datasus_db/datasources/: auxiliar.py  ibge_pop.py  ibge_pop_tcu.py  po.py  sia_pa.py  sih_rd.py  sih_sp.py  sim_do.py
maps/: pl_utils.py  po.py  sih_rh.py  sim_do.py
test/: main.py
views/: ibge_piramide_etaria.py
