[tool.poetry]
name = "datasus-db"
version = "0.1.0"
description = "Biblioteca para baixar e importar dados do datasus para um banco de dados duckdb local"
authors = ["Murilo Matsubara <murilo.matsubara@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "datasus_db" }
]

[tool.poetry.dependencies]
python = "^3.11"
dbfread = "^2.0.7"
duckdb = "^0.9.2"
polars = "^0.19.19"
pyarrow = "^14.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
